benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-safe027_power.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_power.opt.yml/safe027_power.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/safe027_power.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c
Compilation started
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c: In function ‘P0’:
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c:591:19: error: ‘FALSE’ undeclared (first use in this function)
  591 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c:591:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c: In function ‘P2’:
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c:649:19: error: ‘FALSE’ undeclared (first use in this function)
  649 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c:650:19: error: ‘TRUE’ undeclared (first use in this function)
  650 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c: In function ‘main’:
/tmp/BenchExec_run_kxt3wmd8/tmp/tmp07vwz1t4.c:753:19: error: ‘TRUE’ undeclared (first use in this function)
  753 |   weak$$choice1 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
